force-app/main/default/objects/Time_Off_Request__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <formula>End_Date__c -  Start_Date__c +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>