force-app/main/default/objects/Time_Off_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual leave</fullName>
                <default>true</default>
                <label>Annual leave</label>
            </value>
            <value>
                <fullName>Child care</fullName>
            </value>
            <value>
                <fullName>Family member care</fullName>
            </value>
            <value>
                <fullName>Military service</fullName>
            </value>
            <value>
                <fullName>Maternity leave</fullName>
            </value>
            <value>
                <fullName>Occasional</fullName>
            </value>
            <value>
                <fullName>Paternity leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>