force-app/main/default/objects/Time_Off_Request__c/validationRules/End_Date_Before_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Before_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &lt;  Start_Date__c</errorConditionFormula>
    <errorMessage>End Date cannot be earlier than Start Date</errorMessage>
</ValidationRule>